Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}


Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not  null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]

// 新建索引
  indexes {
    owner
    (owner, currency) [unique]
  }
}


Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint [not null, note: "can be negative or positive"]
  created_at timestamptz [not null,  default: `now()`]

  // 新建索引
  indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref:> A.id]
  to_account_id bigint [ref: > A.id]
  amount bigint [not null, note: "can be negative or positive"]
  created_at timestamptz [not null,  default: `now()`]

// 新建索引
  indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}